# pstd

./: Cargo.toml  README.md  t
benches/: crit_bench.rs
src/: alloc.rs  boxed.rs  collections.rs  lib.rs  localalloc.rs  rc.rs  string.rs  sync.rs  vec.rs
src/collections/: btree_map.rs  btree_set.rs  merge_iter.rs
src/collections/btree_map/: mod.rs  mytests.rs  stdtests.rs  vecs.rs
src/collections/btree_set/: entry.rs  mod.rs  tests.rs
src/testing/: crash_test.rs
src/vec/: test.rs
