[package]
name = "pstd"
version = "1.0.1"
edition = "2021"
authors = ["George Barwood"]
description = "Crate with parts of Rust std library ( different implementations, features not yet stabilised etc )."
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/pstd"
include = ["/src"]

[dependencies]
arrayvec = "0.7.4"
serde = { version = "1.0.197", optional=true }

[dev-dependencies]
mimalloc = "0.1.39"
cap = "0.1.2"
criterion = "0.5.1"
bincode = "1.3.3"
rand = "0.8.5"

[features]
serde = ["dep:serde"]
unsafe-optim = []
cap = []
mytests = ["serde"]
stdtests = []
tests = ["mytests", "stdtests"]

[[bench]]
name = "crit_bench"
harness = false
