[package]
name = "pstd"
version = "1.0.25"
edition = "2024"
authors = ["George Barwood"]
description = "Crate with parts of Rust std library ( different implementations, features not yet stabilised etc )."
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/pstd"
include = ["/src"]

[dependencies]
serde = { version = "1.0.197", optional=true }

[dev-dependencies]
mimalloc = "0.1.39"
cap = "0.1.2"
criterion = "0.5.1"
bincode = "1.3.3"
rand = "0.8.5"

[features]
serde = ["dep:serde"]
unsafe-optim = []

# Features for testing
# Note: lib.cs needs to be edited and nightly must be used for -F tests.
cap = [] # High performance allocator
mytests = ["serde"]
stdtests = []
tests = ["mytests", "stdtests"] 

[[bench]]
name = "crit_bench"
harness = false
