[package]
name = "pstd"
version = "1.0.77"
edition = "2024"
authors = ["George Barwood"]
description = "Crate with parts of Rust std library ( different implementations, features not yet stabilised etc )."
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/pstd"
include = ["/src"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
allocator-api2 = "0.2.0"
hashbrown = "0.16.1"
serde = { version = "1.0.197", optional=true }

[dev-dependencies]
mimalloc = "0.1.39"
criterion = "0.5.1"
rand = "0.8.5"
bincode = "1.3.3"

[features]
default = ["serde"]
serde = ["dep:serde"]
unsafe-optim = []
dynbox = []
log-bump = []

# Features for testing
mytests = ["serde"]
stdtests = []
tests = ["mytests", "stdtests"] 

[[bench]]
name = "crit_bench"
harness = false
